--- a/testgithub.html
+++ b/testgithub.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test GitHub</title>
+    <title>Test Git Hub</title>
 </head>
 <body>
-    <p>I am trying to finish my problems of github.</p>
+    <p>I am trying to finish my problems of git hub.</p>
 <h1>
     please pray for me to overcome this situation.
 </h1>
 <i>
     ok,let me finish my work.on my way.
 </i>
+<li>
+    <ul>
+        My problem solved.
+    </ul> <ul>
+        Now i can watch new videos.
+    </ul>
+</li> 
+<p>
+    <b>YAAAAH!!!! Ki moja ,,, valo valgche onek...</b>
+    dhur sob thik hocche but bujhtechi na kichui.
+    amar ta hocche kina?
+</p>
 
 </body>
 </html>
