--- a/testgithub.html
+++ b/testgithub.html
@@ -28,7 +28,7 @@
 </p>
 <p>
     bar bar pech lagteche bal r valo lage na .eto pech lage keno ...sobar ki same problem naki shudhu amar e problem.bar bar pech lagteche bal r valo lage na .eto pech lage keno ...sobar ki same problem naki shudhu amar e problem.bar bar pech lagteche bal r valo lage na .eto pech lage keno ...sobar ki same problem naki shudhu amar e problem.bar bar pech lagteche bal r valo lage na .eto pech lage keno ...sobar ki same problem naki shudhu amar e problem.bar bar pech lagteche bal r valo lage na .eto pech lage keno ...sobar ki same problem naki shudhu amar e problem.bar bar pech lagteche bal r valo lage na .eto pech lage keno ...sobar ki same problem naki shudhu amar e problem.
-<h1 style="color: crimson"> oree pass ami parchi di wow wow dear love</h1>
+<h1 style="color: crimson;font-family:lucida handwriting;"> oree pass ami parchi di wow wow dear love</h1>
 </p>
 </body>
 </html>
